--- a/Index.html
+++ b/Index.html
@@ -11,171 +11,166 @@
       <!-- line 1 -1  -->
       <div class="white">
         <div class="gray">
-          <div class="purple" id="sqr1">1</div>
+          <div class="purple" id="sqr1"></div>
         </div>
       </div>
       <!-- line 1 -2  -->
       <div class="white">
         <div class="gray">
-          <div class="purple" id="sqr2">2</div>
+          <div class="purple" id="sqr2"></div>
         </div>
       </div>
       <!-- line 1 -3  -->
       <div class="white">
         <div class="gray">
-          <div class="purple">3</div>
+          <div class="purple" id="sqr3"></div>
         </div>
       </div>
       <!-- line 1 -4  -->
       <div class="white">
         <div class="gray">
-          <div class="purple">4</div>
+          <div class="purple" id="sqr4"></div>
         </div>
       </div>
     
       <!-- line 1 -5  -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr5"></div>
         </div>
       </div></section>
       <section class="sec2">
       <!-- line 2 -1  -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr21"></div>
         </div>
       </div>
       <!-- line 2 -2  -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr22"></div>
         </div>
       </div>
       <!-- line 2 -3  -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr23"></div>
         </div>
       </div>
     <!-- line 2 -4  -->
     <div class="white">
       <div class="gray">
-        <div class="purple"></div>
+        <div class="purple" id="sqr24"></div>
       </div>
     </div>
     <!-- line 2 -5  -->
     <div class="white">
       <div class="gray">
-        <div class="purple"></div>
+        <div class="purple" id="sqr25"></div>
       </div>
     </section>
     <section class="sec3">
         <!-- line 3 -1  -->
     <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr31"></div>
         </div>
       </div>
       <!-- line 3 -2 -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr32"></div>
         </div>
       </div></section>
       <section class="sec4">
     <!-- line 4 -1  -->
     <div class="white">
       <div class="gray">
-        <div class="purple">41</div>
+        <div class="purple" id="sqr41"></div>
       </div>
     </div>
     <!-- line 4 -2  -->
     <div class="white">
       <div class="gray">
-        <div class="purple">42</div>
+        <div class="purple" id="sqr42"></div>
       </div>
     </section>
-
-
-
     <section class="sec5">
         <!-- line 5 -1  -->
         <div class="white">
           <div class="gray">
-            <div class="purple">51</div>
+            <div class="purple" id="sqr51"></div>
           </div>
         </div>
         <!-- line 5 -2  -->
         <div class="white">
           <div class="gray">
-            <div class="purple">52</div>
+            <div class="purple" id="sqr52"></div>
           </div>
         </div>
         <!-- line 5 -3  -->
         <div class="white">
           <div class="gray">
-            <div class="purple">53</div>
+            <div class="purple" id="sqr53"></div>
           </div>
         </div>
         <!-- line 5 -4  -->
         <div class="white">
           <div class="gray">
-            <div class="purple">54</div>
+            <div class="purple" id="sqr54"></div>
           </div>
         </div>
         <!-- line 5 -5  -->
         <div class="white">
           <div class="gray">
-            <div class="purple">55</div>
+            <div class="purple" id="sqr55"></div>
           </div>
         </div></section>
         <section class="sec6">
         <!-- line 6 -1  -->
         <div class="white">
           <div class="gray">
-            <div class="purple"></div>
+            <div class="purple" id="sqr61"></div>
           </div>
         </div>
         <!-- line 6 -2  -->
         <div class="white">
           <div class="gray">
-            <div class="purple"></div>
+            <div class="purple" id="sqr62"></div>
           </div>
         </div>
         <!-- line 6 -3  -->
         <div class="white">
           <div class="gray">
-            <div class="purple"></div>
+            <div class="purple" id="sqr63"></div>
           </div>
         </div>
       <!-- line 6 -4  -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr64"></div>
         </div>
       </div>
       <!-- line 6 -5  -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr65"></div>
         </div>
       </section>
-
-<section class="sec7">
+      <section class="sec7">
       <!-- line 7 -1  -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr71"></div>
         </div>
       </div>
       <!-- line 7 -2  -->
       <div class="white">
         <div class="gray">
-          <div class="purple"></div>
+          <div class="purple" id="sqr72"></div>
         </div>
       </section>
-
     </div>
   </body>
 </html>
